Fix list scrollbar

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -2,6 +2,10 @@
 
 .container {
   background-color: #34495e;
-  max-height: 100vh;
+  height: 100vh;
   overflow: hidden;
+}
+
+.content {
+  height: calc(100% - 80px);
 }
